<resources>
    <string name="app_name">Habitizer</string>
    <string name="task_name">Task Name</string>
    <string name="enter_goal_time">Enter Goal Time</string>
    <string name="_45m">45m</string>
    <string name="title">Routine Title</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="set_time">Set Time</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="end_edit">End Edit</string>
    <string name="add_task">Add Task</string>
    <string name="edit">Edit</string>
    <string name="new_task_name">New Task Name</string>
    <string name="delete">Delete</string>
    <string name="new_routine_name_text">New Routine</string>
    <string name="add">add routine</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
</resources>